@@ -1,3 +1,8 @@
+2015-06-25 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVReader.m
+	Try to properly parse double-quoted quote characters
+
 2015-05-15 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.m (query)
